--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <div class="prev"></div>
         <div class="next"></div>
       </div>
+      <div class="tb-container">
+        
+      </div>
     </div>
-
     <script src="js/main.js"></script>
   </body>
 </html>
